# gh-discussion-export

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
openspec/changes/add-blank-line-before-divider/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-01-31-foundation/: design.md  proposal.md
openspec/changes/archive/2026-01-31-graphql-client/: design.md  proposal.md
openspec/changes/archive/2026-02-01-discussion-fetch/: design.md  tasks.md
openspec/changes/archive/2026-02-01-integration/: tasks.md  (+2 more)
openspec/changes/discussion-fetch/: design.md  proposal.md  tasks.md
openspec/changes/documentation/: design.md  proposal.md  tasks.md
openspec/changes/download-assets/: design.md  proposal.md  tasks.md
openspec/changes/e2e-tests/: design.md  proposal.md  tasks.md
openspec/changes/foundation/: design.md  tasks.md
openspec/changes/graphql-client/: design.md  tasks.md
openspec/changes/integration/: tasks.md
openspec/changes/markdown-output/: design.md  proposal.md  tasks.md
openspec/changes/simplify-cli-args/: design.md  proposal.md  tasks.md
openspec/specs/cli-parsing/: spec.md
openspec/specs/discussion-fetching/: spec.md
openspec/specs/gh-auth/: spec.md
openspec/specs/git-repo-detection/: spec.md
openspec/specs/github-api-models/: spec.md
openspec/specs/graphql-client/: spec.md
openspec/specs/markdown-output-generation/: spec.md
src/: assets.rs  auth.rs  cli.rs  client.rs  command_runner.rs  error.rs  fetch.rs  graphql.rs  lib.rs  main.rs  models.rs  output.rs  progress.rs  transform.rs
(+23 files in other folders)
