[package]
name = "gh-discussion-export"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking", "http2"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
mockall = "0.14.0"
